--- a/gallery.css
+++ b/gallery.css
@@ -1,3 +1,9 @@
+ul.icon-line li {
+	display: inline;
+	list-style-type: none;
+	padding-right: 20px;
+}
+
 img.small {
 	border: 1px solid #aaa;
 	border-radius: 4px;
