--- a/gallery.css
+++ b/gallery.css
@@ -8,22 +8,38 @@ img.small {
 	border: 1px solid #aaa;
 	border-radius: 4px;
 	padding: 5px;
+
+	width: 100px;
+	height: 100px;
+	object-fit: contain;
 }
 
 img.small-focused {
 	border: 1px solid black;
 	border-radius: 4px;
 	padding: 5px;
+
+	width: 100px;
+	height: 100px;
+	object-fit: contain;
 }
 
 img.half {
 	border: 1px solid #888;
 	border-radius: 4px;
 	padding: 5px;
+
+	width: 250px;
+	height: 250px;
+	object-fit: contain;
 }
 
 img.big {
 	border: 5px solid black;
 	border-radius: 6px;
 	padding: 10px;
+
+	width: 350px;
+	height: 350px;
+	object-fit: contain;
 }
