flats: DELETE, both in the REST way and in the plain HTML load way

--- a/general.css
+++ b/general.css
@@ -1,2 +1,4 @@
-span.OK    {color: green;}
-span.error {color: red  ;}
+span.OK   , div.OK    {color: green;}
+span.error, div.error {color: red  ;}
+
+li form {display:inline;}
